--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
 .mainWidth {
-    overflow:hidden;
-    position:relative;
-    margin:0px auto;
-    width:1200px;
+    margin: auto;
+    width: 50%;
 }
 
 h1 {
-    padding: 40px;
-    text-align: left;
+    padding: 15px;
+    width: 600px;
 }
 
+p {
+    margin-left: 10px;
+}
 .crud {
     position: absolute;
     margin: 30px 0px 0px 300px;
@@ -23,10 +24,13 @@ h2 {
 	border-style: outset;
 }
 
-body {
-    margin-left: 50px;
-    width:800;
+ol {
+    margin-bottom: 40px;
 }
+body {
+    width:600;
+}
+
 .col1 {
     text-align: left;
     width: 50px;
@@ -66,7 +70,7 @@ th {
 a.button {
     position:block;
 	margin-right: 25px;    
-	float:left;
+/*	float:left;*/
 	background-color:#0033CC; /* blue */
 	padding:15px 20px;
 	color:#FFFFFF;
@@ -75,6 +79,6 @@ a.button {
 	transition:background 0.6s linear 0s, color 0.6s linear 0s;	
 }
 
-a.button:hover {
+/*a.button:hover {*/
 	background-color:#000080; /* navy */
-}
+/*}*/
