--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,6 @@ a.button {
 	transition:background 0.6s linear 0s, color 0.6s linear 0s;	
 }
 
-/*a.button:hover {*/
+a.button:hover {
 	background-color:#000080; /* navy */
-/*}*/
+}
